--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Vernon+Adams&display=swap"
+    />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
