--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap"
     />
 
     <meta
